Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/API/C13W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef unsigned char BYTE;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef const char * LPCSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;
C13DRVAPI BOOL __stdcall C13_ExtDinRd(HCARD handleval);
C13DRVAPI BOOL __stdcall C13_ExtDoutRd(HCARD handleval);
C13DRVAPI VOID __stdcall C13_ExtDoutWr(BOOL doutval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_FileClose(LPVOID handle);
C13DRVAPI BOOL __stdcall C13_FileErr(VOID);
C13DRVAPI VOID __stdcall C13_FileErrClear(VOID);
C13DRVAPI VOID __stdcall C13_FileErrSet(VOID);
C13DRVAPI LPVOID __stdcall C13_FileOpenRead(LPCSTR filename);
C13DRVAPI LPVOID __stdcall C13_FileOpenWrite(LPCSTR filename);
C13DRVAPI BOOL __stdcall C13_FileRead(LPVOID handle,LPVOID buffer,USHORT count);
C13DRVAPI BOOL __stdcall C13_FileSeek(LPVOID handle,ULONG offset);
C13DRVAPI ULONG __stdcall C13_FileTell(LPVOID handle);
C13DRVAPI BOOL __stdcall C13_FileWrite(LPVOID handle,LPVOID buffer,USHORT count);
C13DRVAPI USHORT __stdcall C13_GetHigh(ULONG val);
C13DRVAPI USHORT __stdcall C13_GetLow(ULONG val);
C13DRVAPI USHORT __stdcall C13_GetOff(LPVOID valptr);
C13DRVAPI USHORT __stdcall C13_GetSeg(LPVOID valptr);
C13DRVAPI USHORT __stdcall C13_GlobalRdW(USHORT addrval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_GlobalWrW(USHORT value,USHORT addrval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_HandleClose(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_HandleDel(HCARD handleval);
C13DRVAPI HCARD __stdcall C13_HandleIns(LPCSTR cardname,INT cardnum,LPVOID hAppWnd,USHORT uiRemovalMsg);
C13DRVAPI BOOL __stdcall C13_HandleOkay(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_HandleOpen(LPCSTR cardname,INT cardnum,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_HandleOpenWin(LPCSTR cardname,INT cardnum,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_HandleVer(HCARD handleval);
C13DRVAPI ULONG __stdcall C13_HeapAlloc(ULONG wordcount,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_HeapAllocAll(LPULONG wordcount,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_HeapAllocAllDPM(LPULONG wordcount,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_HeapAllocDPM(ULONG wordcount,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_HeapAllocEx(USHORT configval,ULONG wordcount,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_HeapWipe(HCARD handleval);
C13DRVAPI ULONG __stdcall C13_HeapWipeDPM(HCARD handleval);
C13DRVAPI USHORT __stdcall C13_HPMAddrRd(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_HPMAddrWr(USHORT addrval,HCARD handleval);
C13DRVAPI BYTE __stdcall C13_HPMCtrlRd(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_HPMCtrlWr(BYTE value,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_HPMDataRd(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_HPMDataRds(LPUSHORT valueptr,USHORT countval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_HPMDataWr(USHORT value,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_HPMDataWrs(LPUSHORT valueptr,USHORT countval,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_HPMRdL(USHORT addrval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_HPMRdsL(LPULONG valueptr,USHORT addrval,INT countval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_HPMRdsW(LPUSHORT valueptr,USHORT addrval,INT countval,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_HPMRdW(USHORT addrval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_HPMWrL(ULONG value,USHORT addrval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_HPMWrsL(LPULONG valueptr,USHORT addrval,INT countval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_HPMWrsW(LPUSHORT valueptr,USHORT addrval,INT countval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_HPMWrW(USHORT value,USHORT addrval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_IntClear(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_IntConfig(USHORT configval,USHORT count,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_IntDisable(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_IntEnable(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_IntEnableCond(HCARD handleval);
C13DRVAPI LPVOID __stdcall C13_IntGet(HCARD handleval);