Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/API/C13W32NET.CS

        [DllImport("C13W32.DLL", EntryPoint = "_C13_ExtDinRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_ExtDinRd(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ExtDoutRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_ExtDoutRd(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ExtDoutWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_ExtDoutWr(Int32 doutval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_FileClose@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_FileClose(IntPtr handle);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_FileErr@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_FileErr();
        [DllImport("C13W32.DLL", EntryPoint = "_C13_FileErrClear@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_FileErrClear();
        [DllImport("C13W32.DLL", EntryPoint = "_C13_FileErrSet@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_FileErrSet();
        [DllImport("C13W32.DLL", EntryPoint = "_C13_FileOpenRead@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern unsafe IntPtr* C13_FileOpenRead(ref string filename);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_FileOpenWrite@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern unsafe IntPtr* C13_FileOpenWrite(ref string filename);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_FileRead@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_FileRead(IntPtr handle, IntPtr buffer, UInt16 count);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_FileSeek@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_FileSeek(IntPtr handle, UInt32 offset);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_FileTell@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_FileTell(IntPtr handle);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_FileWrite@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_FileWrite(IntPtr handle, IntPtr buffer, UInt16 count);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_GetHigh@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_GetHigh(UInt32 val);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_GetLow@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_GetLow(UInt32 val);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_GetOff@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_GetOff(IntPtr valptr);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_GetSeg@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_GetSeg(IntPtr valptr);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_GlobalRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_GlobalRdW(UInt16 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_GlobalWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_GlobalWrW(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_HandleClose@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_HandleClose(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_HandleDel@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_HandleDel(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_HandleIns@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_HandleIns(ref string cardname, Int32 cardnum, IntPtr happwnd, UInt16 uiremovalmsg);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_HandleOkay@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_HandleOkay(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_HandleOpen@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_HandleOpen(ref string cardname, Int32 cardnum, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_HandleOpenWin@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_HandleOpenWin(ref string cardname, Int32 cardnum, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_HandleVer@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_HandleVer(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_HeapAlloc@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_HeapAlloc(UInt32 wordcount, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_HeapAllocAll@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_HeapAllocAll(ref UInt32 wordcount, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_HeapAllocAllDPM@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_HeapAllocAllDPM(ref UInt32 wordcount, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_HeapAllocDPM@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_HeapAllocDPM(UInt32 wordcount, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_HeapAllocEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_HeapAllocEx(UInt16 configval, UInt32 wordcount, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_HeapWipe@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_HeapWipe(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_HeapWipeDPM@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_HeapWipeDPM(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_HPMAddrRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_HPMAddrRd(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_HPMAddrWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_HPMAddrWr(UInt16 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_HPMCtrlRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern byte C13_HPMCtrlRd(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_HPMCtrlWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_HPMCtrlWr(byte value, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_HPMDataRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_HPMDataRd(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_HPMDataRds@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_HPMDataRds(ref UInt16 valueptr, UInt16 countval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_HPMDataWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_HPMDataWr(UInt16 value, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_HPMDataWrs@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_HPMDataWrs(ref UInt16 valueptr, UInt16 countval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_HPMRdL@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_HPMRdL(UInt16 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_HPMRdsL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_HPMRdsL(ref UInt32 valueptr, UInt16 addrval, Int32 countval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_HPMRdsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_HPMRdsW(ref UInt16 valueptr, UInt16 addrval, Int32 countval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_HPMRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_HPMRdW(UInt16 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_HPMWrL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_HPMWrL(UInt32 value, UInt16 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_HPMWrsL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_HPMWrsL(ref UInt32 valueptr, UInt16 addrval, Int32 countval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_HPMWrsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_HPMWrsW(ref UInt16 valueptr, UInt16 addrval, Int32 countval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_HPMWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_HPMWrW(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_IntClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_IntClear(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_IntConfig@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_IntConfig(UInt16 configval, UInt16 count, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_IntDisable@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_IntDisable(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_IntEnable@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_IntEnable(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_IntEnableCond@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_IntEnableCond(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_IntGet@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern unsafe IntPtr* C13_IntGet(UInt32 handleval);
